--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -2159,6 +2159,7 @@ source "net/Kconfig"
 source "drivers/Kconfig"
 
 source "drivers/firmware/Kconfig"
+source "ubuntu/Kconfig"
 
 source "fs/Kconfig"
 
