ARM: manta_defconfig: Enable VIDEO_EXYNOS_TV
Change-Id: Ibb0553fe1312fa277ea7d5aa53402e8700b56f3d
Signed-off-by: Benoit Goby <benoit@android.com>

--- a/arch/arm/configs/manta_defconfig
+++ b/arch/arm/configs/manta_defconfig
@@ -251,6 +251,7 @@ CONFIG_VIDEO_EXYNOS_GSCALER=y
 CONFIG_VIDEO_EXYNOS_JPEG=y
 CONFIG_VIDEO_EXYNOS_FIMG2D=y
 CONFIG_VIDEO_EXYNOS_MFC=y
+CONFIG_VIDEO_EXYNOS_TV=y
 CONFIG_VIDEO_EXYNOS_ROTATOR=y
 CONFIG_VIDEO_EXYNOS5_FIMC_IS=y
 CONFIG_ION=y
