--- a/arch/arm/mach-exynos/Kconfig
+++ b/arch/arm/mach-exynos/Kconfig
@@ -511,6 +511,7 @@ config MACH_MANTA
 	select EXYNOS_DEV_SYSMMU
 	select EXYNOS_DEV_DWMCI
 	select EXYNOS_DEV_DMA
+	select EXYNOS_SETUP_ADC
 	select EXYNOS_SETUP_DP
 	select EXYNOS_SETUP_FIMD1
 	select EXYNOS_DEV_ROTATOR
@@ -525,6 +526,7 @@ config MACH_MANTA
 	select EXYNOS4_SETUP_MFC
 	select EXYNOS4_SETUP_USB_PHY
 	select EXYNOS4_SETUP_FIMC_IS
+	select SAMSUNG_DEV_ADC
 	select SAMSUNG_DEV_BACKLIGHT
 	select SAMSUNG_DEV_PWM
 	help
