ARM: EXYNOS: manta: Add persistent clock device
Change-Id: I13bfd3630ffcecf9f64f17f598833cb85b1fdef0
Signed-off-by: Todd Poynor <toddpoynor@google.com>

--- a/arch/arm/mach-exynos/Kconfig
+++ b/arch/arm/mach-exynos/Kconfig
@@ -526,6 +526,7 @@ config MACH_MANTA
 	select EXYNOS_DEV_SYSMMU
 	select EXYNOS_DEV_DWMCI
 	select EXYNOS_DEV_DMA
+	select EXYNOS_PERSISTENT_CLOCK
 	select EXYNOS_SETUP_ADC
 	select EXYNOS_SETUP_DP
 	select EXYNOS_SETUP_FIMD1
