--- a/arch/arm/configs/manta_defconfig
+++ b/arch/arm/configs/manta_defconfig
@@ -211,6 +211,7 @@ CONFIG_POWER_SUPPLY=y
 CONFIG_FUELGAUGE_MAX17047=y
 CONFIG_CHARGER_BQ24191=y
 CONFIG_BATTERY_MANTA=y
+CONFIG_CHARGER_SMB347=y
 # CONFIG_HWMON is not set
 CONFIG_WATCHDOG=y
 CONFIG_S3C2410_WATCHDOG=y
