--- a/drivers/media/video/exynos/tv/Kconfig
+++ b/drivers/media/video/exynos/tv/Kconfig
@@ -38,7 +38,7 @@ config VIDEO_EXYNOS_HDMI
 config VIDEO_EXYNOS_HDMI_AUDIO_I2S
 	bool "Enable HDMI audio using I2S path"
 	depends on VIDEO_EXYNOS_HDMI
-	depends on SND_SOC_SAMSUNG_SMDK_WM8994
+	depends on SND_SOC_SAMSUNG_SMDK_WM8994 || SND_SOC_SAMSUNG_MANTA_WM1811
 	default y
 	help
 	  Enables HDMI audio through I2S path.
