--- a/arch/arm/configs/manta_defconfig
+++ b/arch/arm/configs/manta_defconfig
@@ -213,6 +213,7 @@ CONFIG_USB_USBNET=y
 CONFIG_WIFI_CONTROL_FUNC=y
 CONFIG_BCMDHD=y
 CONFIG_BCMDHD_FW_PATH="/system/vendor/firmware/fw_bcmdhd.bin"
+CONFIG_DHD_USE_SCHED_SCAN=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_KEYRESET=y
 # CONFIG_INPUT_MOUSE is not set
